--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -289,7 +289,7 @@ img.build-status {
 
 .post-like-button.liked {
   .glyphicon-thumbs-up:before {
-    .glyphicon-ok;
+    content: "\e013";
   }
 
   &:hover {
@@ -300,7 +300,7 @@ img.build-status {
     }
 
     .glyphicon-thumbs-up:before {
-      .glyphicon-thumbs-down;
+      content: "\e126";
     }
   }
 }
