--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -304,3 +304,43 @@ img.build-status {
     }
   }
 }
+
+.navbar-nav {
+  .dropdown-menu {
+    .form-group {
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
+
+.search-icon-badge {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  background: rgba(255, 255, 255, 0.29);
+}
+
+.notification-dropdown {
+  min-width: 220px;
+
+  li {
+    color: rgb(85, 85, 85);
+    padding: 7px;
+    border-bottom: 1px solid #aaa;
+  }
+  li:last-child {
+    border-bottom: none;
+  }
+  a {
+    display: inline-block !important;
+    padding: 0 !important;
+    background: none !important;
+    font-size: 14px !important;
+    white-space: normal !important;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
+}
