--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -344,3 +344,89 @@ img.build-status {
     word-break: break-all;
   }
 }
+
+.plugins-page {
+
+
+  .plugin-list {
+    padding-right: 0;
+    padding-left: 0;
+
+    .search-bar {
+      padding-left: 15px;
+      padding-right: 20px;
+
+      .panel{
+        padding: 3px 10px;
+
+        .form-group {
+          margin: 0;
+          padding: 0;
+        }
+      }
+
+      .new-plugin {
+        padding-left: 0;
+        padding-right: 0;
+
+        .btn {
+          width: 100%;
+          height: 51px;
+          margin: 0;
+          padding-top: 17px;
+        }
+      }
+    }
+
+    .plugin-element {
+
+      padding-right: 5px;
+
+      img.media-object {
+        max-height: 84px;
+        max-width: 64px;
+      }
+
+      .media-heading {
+        margin-bottom: 0;
+
+        .download-count {
+          float: right;
+          font-size: 65%;
+        }
+      }
+
+      .plugin-author {
+        font-weight: 400;
+        line-height: 1;
+        color: #777;
+      }
+
+      p {
+        margin-top: 3px;
+        margin-bottom: 0;
+      }
+
+    }
+
+  }
+
+  .plugin-filter {
+
+    .btn-group-vertical{
+      margin-top: 0;
+      width:100%;
+
+      .btn {
+        padding: 5px 10px;
+        text-align: left;
+
+        img {
+          margin-right: 5px;
+        }
+      }
+    }
+
+  }
+
+}
