--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -349,15 +349,28 @@ img.build-status {
 
 
   .plugin-list {
-    padding-right: 0;
-    padding-left: 0;
+
+    @media (min-width: 768px) {
+      padding-right: 0;
+      padding-left: 0;
+    }
 
     .search-bar {
       padding-left: 15px;
       padding-right: 20px;
 
+      .search-box {
+        @media (max-width: 768px) {
+          padding-right: 0;
+        }
+      }
+
       .panel{
         padding: 3px 10px;
+
+        @media (max-width: 768px) {
+          margin-bottom: 0;
+        }
 
         .form-group {
           margin: 0;
@@ -366,14 +379,19 @@ img.build-status {
       }
 
       .new-plugin {
-        padding-left: 0;
         padding-right: 0;
+
+        @media (min-width: 768px) {
+          padding-left: 0;
+        }
 
         .btn {
           width: 100%;
-          height: 51px;
-          margin: 0;
-          padding-top: 17px;
+          @media (min-width: 768px) {
+            height: 51px;
+            margin: 0;
+            padding-top: 17px;
+          }
         }
       }
     }
@@ -429,4 +447,10 @@ img.build-status {
 
   }
 
+}
+
+@media (max-width: 768px) {
+  #atlwdg-trigger {
+    display: none;
+  }
 }
