--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -438,6 +438,9 @@ img.build-status {
       .btn {
         padding: 5px 10px;
         text-align: left;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
 
         img {
           margin-right: 5px;
