--- a/resources/assets/sass/plugin.scss
+++ b/resources/assets/sass/plugin.scss
@@ -131,3 +131,43 @@
   }
 
 }
+
+.panel-body.tabbed {
+  padding: 0;
+
+  .tab-content .tab-pane {
+    padding: 15px;
+  }
+}
+
+.nav.nav-tabs .active {
+  background-color: rgba(78, 78, 78, 0.18);
+  margin-bottom: 0;
+}
+
+.panel .nav-tabs {
+  justify-content: center;
+  display: flex;
+}
+
+.panel-success .nav-tabs {
+  background-color: #449647;
+}
+
+.tab-pane.preformatted {
+  color: #fff;
+  background-color: #333;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
+  box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
+  margin-top: -1px;
+  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+  font-size: 85%;
+}
+
+.col-md-8-5 {
+  width: 70.83%;
+}
+
+.col-md-3-5 {
+  width: 29.16%;
+}
