Plugin creation and uploading (*crosses fingers*)

--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -261,3 +261,26 @@ img.build-status {
     display: none;
   }
 }
+
+h1.tridentsdk-page-header {
+  margin-bottom: 25px;
+  margin-top: 15px;
+}
+
+.panel-body .form-group:first-child {
+  margin-top: 0;
+}
+
+form .panel-body {
+  padding-bottom: 5px;
+}
+
+.headcrab {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+img.placeholder-image-32 {
+  width: 32px;
+  height: 32px;
+}
