--- a/resources/assets/sass/plugin.scss
+++ b/resources/assets/sass/plugin.scss
@@ -154,6 +154,10 @@
   background-color: #449647;
 }
 
+.panel-info-original .nav-tabs {
+  background-color: #03a9f4;
+}
+
 .tab-pane.preformatted {
   color: #fff;
   background-color: #333;
